--- a/debian/changelog
+++ b/debian/changelog
@@ -101,6 +101,7 @@ nvidia-graphics-drivers (361.45.18-1) UNRELEASED; urgency=medium
   * Restrict watch file to releases from the 361.xx long lived branch.
 
   [ Andreas Beckmann ]
+  * libcuda1: Add Provides: libcuda-8.0-1{,-i386}.
   * Update lintian overrides.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 07 Feb 2016 16:45:08 +0000
