--- a/debian/changelog
+++ b/debian/changelog
@@ -67,16 +67,14 @@ nvidia-graphics-drivers (364.19-1) UNRELEASED; urgency=medium
     for Linux 4.6
   * Add drm-gem-object-lookup.patch to fix nvidia-drm kernel module build
     failure for Linux 4.7.
-  * Add new nvidia-vulkan-icd package which installs nvidia_icd.json to
-    /usr/share/vulkan/icd.d and make it depend on libglx-nvidia0 since that
-    library implements the Vulkan APIs, libvulkan1 and suggest vulkan-info in
-    order to support Vulkan. Make nvidia-driver depend on it. (Closes: #827188)
   * Restrict watch file to releases from the 364.xx short lived branch.
 
   [ Andreas Beckmann ]
   * nvidia-driver-libs: Prefer libgl1-glvnd-nvidia-glx over libgl1-nvidia-glx.
   * libnvidia-egl-wayland: New package for libnvidia-egl-wayland.so.$VERSION.
   * Autoload the new nvidia-drm kernel module for automatic Xorg config.
+  * nvidia-vulkan-common, nvidia-vulkan-icd: New packages for Vulkan support.
+    (Closes: #827188)
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 06 Apr 2016 22:21:26 +0100
 
