--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
 nvidia-graphics-drivers (358.16-1) experimental; urgency=medium
 
-  [ Luca Boccassi ]
   * New upstream short lived branch release 358.16 (2015-11-20).
     (Closes: #819042)
     * Fixed CVE-2015-7869: Unsanitized User Mode Input.  (Closes: #805917)
@@ -74,9 +73,11 @@ nvidia-graphics-drivers (358.16-1) experimental; urgency=medium
       by default on 32 bit OpenGL applications with Linux 3.11+ and glibc
       2.19+.  Memory allocated this way will consume space in /dev/shm.
       Setting the environment variable __GL_DevShmPageableAllocations
-      to 2 will disable this feature
-  * Updated watch version to 358
+      to 2 will disable this feature.
+
+  [ Luca Boccassi ]
   * Update symbols control files.
+  * Restrict watch file to releases from the 358.xx short lived branch.
 
   [ Andreas Beckmann ]
   * Updated kernel module build, patches and remaining infrastructure for the
