--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * rules, rules.defs: Synchronize variable naming with unstable (352.79-3).
   * rules, control: Synchronize substvars with unstable (352.79-3).
   * get-orig-source: Synchronize with unstable (352.79-3).
+  * control: Synchronize descriptions with unstable.
   * bug-script: Synchronize with unstable (352.79-3).
   * bug-control.mk: New script to generate bug-control (352.79-4).
   * bug-control, bug-script: Collect some information about OpenCL (352.79-6).
