finalize changelog for nvidia-graphics-drivers (355.11-7), upload to unstable
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6777 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (355.11-7) unstable; urgency=medium
+
+  * Merge changes from 352.79-10.
+  * Upload to unstable.
+
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 28 Jul 2016 19:28:35 +0200
+
 nvidia-graphics-drivers (355.11-6) experimental; urgency=medium
 
   * Merge changes from 352.79-9.
