--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (358.16-3) unstable; urgency=medium
+
+  * Upload to unstable.
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 29 Jul 2016 14:58:57 +0200
+
 nvidia-graphics-drivers (358.16-2) experimental; urgency=medium
 
   * Merge changes from 352.79-10.
@@ -96,7 +102,6 @@ nvidia-graphics-drivers (358.16-1) experimental; urgency=medium
 
 nvidia-graphics-drivers (355.11-7) unstable; urgency=medium
 
-  * Merge changes from 352.79-10.
   * Upload to unstable.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 28 Jul 2016 19:28:35 +0200
