finalize changelog for nvidia-graphics-drivers (361.45.18-2), upload to unstable
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6788 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (361.45.18-2) unstable; urgency=medium
+
+  * Upload to unstable.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 30 Jul 2016 07:27:45 +0200
+
 nvidia-graphics-drivers (361.45.18-1) experimental; urgency=medium
 
   * New upstream long lived branch release 361.45.18 (2016-06-28).
