--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+nvidia-graphics-drivers (370.23-0~svn) UNRELEASED; urgency=medium
+
+  * New upstream beta release 370.23 (2016-08-15).
+    - Added the ability to over- and under-clock certain GeForce
+      GPUs in the GeForce GTX 1000 series and later.  For GPUs that allow it,
+      an offset can be applied to clock values in some clock domains of
+      all performance levels.  This clock manipulation is done at the
+      user's own risk.  See the README documentation of the "CoolBits"
+      X configuration option for more details.
+    - Fixed a bug that prevented Vulkan applications from presenting from
+      multiple queues to the same X11 swapchain.
+    - Added the "PixelShiftMode" MetaMode option, enabling support for 4K and
+      8K pixel shift displays.  See the README for details.
+
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 16 Aug 2016 20:54:02 +0100
+
 nvidia-graphics-drivers (367.35-1) UNRELEASED; urgency=medium
 
   * New upstream long lived branch release 367.35 (2016-07-15).
