--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ nvidia-graphics-drivers (370.23-0~svn) UNRELEASED; urgency=medium
     - Added the "PixelShiftMode" MetaMode option, enabling support for 4K and
       8K pixel shift displays.  See the README for details.
 
+  [ Luca Boccassi ]
+  * Update nv-readme.ids
+
  -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 16 Aug 2016 20:54:02 +0100
 
 nvidia-graphics-drivers (367.35-1) UNRELEASED; urgency=medium
