Add nvidia-drm-fence-kapi-attribute.patch to fix nvidia-drm build failure on i386 and 4.6+
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/370@6814 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ nvidia-graphics-drivers (370.23-0~svn) UNRELEASED; urgency=medium
   * Update nv-readme.ids
   * Update symbols files
   * Drop drm-gem-object-lookup.patch, fixed upstream
+  * Add nvidia-drm-fence-kapi-attribute.patch to fix nvidia-drm kernel module
+    build failure for i386 Linux 4.6 and 4.7.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 16 Aug 2016 20:54:02 +0100
 
