Update nv-readme.ids for 367.44
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/367@6823 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ nvidia-graphics-drivers (367.44-0~svn) UNRELEASED; urgency=medium
       such as ForceCompositionPipeline, ForceFullCompositionPipeline,
       Rotation, Reflection, and Transform.
 
+  [ Luca Boccassi ]
+  * Update nv-readme.ids
+
  -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 23 Aug 2016 19:16:07 +0100
 
 nvidia-graphics-drivers (367.35-1) experimental; urgency=medium
