--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ nvidia-graphics-drivers (367.44-0~svn) UNRELEASED; urgency=medium
 
   [ Luca Boccassi ]
   * Update nv-readme.ids
+  * Update symbols files
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 23 Aug 2016 19:16:07 +0100
 
