--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ nvidia-graphics-drivers (367.44-0~svn) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Update nv-readme.ids
   * Update symbols files
+  * drm-gem-object-lookup.patch, radix-tree-empty.patch: Drop, fixed upstream.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 23 Aug 2016 19:16:07 +0100
 
