--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (367.44-2) UNRELEASED; urgency=medium
+
+  * Update symbols control files.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Sep 2016 19:34:10 +0200
+
 nvidia-graphics-drivers (367.44-1) experimental; urgency=medium
 
   * New upstream long lived branch release 367.44 (2016-08-23).
