--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ nvidia-graphics-drivers (370.28-0~svn1) UNRELEASED; urgency=medium
   * Update nv-readme.ids
   * Update symbols files
   * drm-gem-object-lookup.patch, radix-tree-empty.patch: Drop, fixed upstream.
+  * man-fixes-nvidia-smi.patch: refresh, fails to apply on 370.28.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 16 Aug 2016 20:54:02 +0100
 
