Add nvidia-drm-master-dev.patch to fix nvidia-drm build failure on 4.8+
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/367@6842 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 nvidia-graphics-drivers (367.44-2) UNRELEASED; urgency=medium
 
+  [ Andreas Beckmann ]
   * Update symbols control files.
   * Update lintian overrides.
+
+  [ Luca Boccassi ]
+  * Add nvidia-drm-master-dev.patch to fix nvidia-drm kernel module build
+    failure for Linux 4.8.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Sep 2016 19:34:10 +0200
 
