hint to reboot with 'acpi=off' if installing nvidia-legacy-check hangs
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6843 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 nvidia-graphics-drivers (361.45.18-3~svn1) UNRELEASED; urgency=medium
 
+  [ Luca Boccassi ]
   * Update use-kbuild-flags.patch to add LDFLAGS to nvidia-modeset.Kbuild
     and Makefile. Fixes x86_64 kernel builds with i386 userspace.
     (Closes: #834446)
+
+  [ Andreas Beckmann ]
+  * nvidia-legacy-check: Hint to reboot with 'acpi=off' if the installation
+    hangs. Document the issue in the preinst script.  (Closes: #819869)
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 06 Sep 2016 20:33:18 +0100
 
