finalize changelog for nvidia-graphics-drivers (361.45.18-3)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6846 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (361.45.18-3~svn1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (361.45.18-3) unstable; urgency=medium
 
   [ Luca Boccassi ]
   * Update use-kbuild-flags.patch to add LDFLAGS to nvidia-modeset.Kbuild
@@ -10,7 +10,7 @@ nvidia-graphics-drivers (361.45.18-3~svn1) UNRELEASED; urgency=medium
     installation hangs. Document the issue in the script.  (Closes: #819869)
   * Update lintian overrides.
 
- -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 06 Sep 2016 20:33:18 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 18 Sep 2016 20:24:14 +0200
 
 nvidia-graphics-drivers (361.45.18-2) unstable; urgency=medium
 
