--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (364.19-2~svn) UNRELEASED; urgency=medium
+
+  * Merge changes from 361.45.18-3.
+  * Upload to unstable.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 18 Sep 2016 20:58:10 +0200
+
 nvidia-graphics-drivers (364.19-1) experimental; urgency=medium
 
   * New upstream short lived branch release 364.19 (2016-04-22).
