--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nvidia-graphics-drivers (367.44-2) UNRELEASED; urgency=medium
   * Merge changes from 364.19-2.
   * Update symbols control files.
   * Update lintian overrides.
+  * Restrict watch file to releases from the 367.xx long lived branch.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Sep 2016 19:34:10 +0200
 
