--- a/debian/changelog
+++ b/debian/changelog
@@ -12,14 +12,22 @@ nvidia-graphics-drivers (367.44-1) experimental; urgency=medium
   * New upstream long lived branch release 367.44 (2016-08-23).
     - Fixed a regression that caused applications using indirect GLX
       to crash.
-    - Added support for the following GPUs: TITAN X (Pascal), GeForce GTX
-      1060 6GB, GeForce GTX 1060 3GB.
+    - Added support for the following GPUs: TITAN X (Pascal),
+      GeForce GTX 1060 6GB, GeForce GTX 1060 3GB.
     - Fixed a regression introduced in 367.35 that caused the first
       modeset of the X server to display blank if the features requested
       in the X configuration file enabled the X driver's composition
       pipeline.  This would be triggered, e.g., by MetaMode tokens
       such as ForceCompositionPipeline, ForceFullCompositionPipeline,
       Rotation, Reflection, and Transform.
+  * New upstream release 361 series.
+    - Fixed a bug that could cause OpenGL applications to leak open file
+      descriptors under some circumstances.
+    - Fixed a crash in the OpenGL and OpenGL ES drivers in situations where
+      some of the NVIDIA device nodes were not accessible.
+    - Fixed a crash when querying the CUDA device handle of an EGLDevice in
+      a system with multiple GPUs when the NVIDIA UVM device node or kernel
+      module was not accessible.
 
   [ Luca Boccassi ]
   * Update nv-readme.ids
@@ -75,7 +83,7 @@ nvidia-graphics-drivers (367.35-1) experimental; urgency=medium
       from sleep or hot-replug.
   * New upstream release 361 series.
     - Added support for querying clock values on Pascal GPUs.
-    - Fixed a bug that could lead to a system crash if there was a peer-to-peer 
+    - Fixed a bug that could lead to a system crash if there was a peer-to-peer
       mapping still active during CUDA context teardown.
 
   [ Luca Boccassi ]
