Drop page-cache-release.patch, get-user-pages.patch, vm-fault-minor.patch, fixed upstream
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@6883 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,8 @@ nvidia-graphics-drivers (340.98-1+) UNRELEASED; urgency=medium
   * Update lintian overrides.
 
   [ Luca Boccassi ]
+  * page-cache-release.patch, get-user-pages.patch, vm-fault-minor.patch:
+    drop, fixed upstream.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 11:34:10 +0100
 
