swap dependency between fatbinaryloader and ptxjitcompiler packages
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6886 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (367.44-3) UNRELEASED; urgency=medium
+
+  * Let libnvidia-fatbinaryloader depend on libnvidia-ptxjitcompiler.
+    (Closes: #839193)
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 07 Oct 2016 17:01:25 +0200
+
 nvidia-graphics-drivers (367.44-2) unstable; urgency=medium
 
   * Merge changes from 364.19-2.
