fold changelog entries for superseded patches
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@6888 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-nvidia-graphics-drivers (340.98-1+) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.98-0~svn4jessie) UNRELEASED; urgency=medium
 
   * New upstream legacy 340xx branch release 340.98 (2016-09-26).
     - Added support for the screen_info.ext_lfb_base field, on kernels that
       have it, in order to properly handle UEFI framebuffer consoles with
       physical addresses above 4GB.
+    * Improved compatibility with recent Linux kernels.
 
   [ Andreas Beckmann ]
   * Stop special-casing of the nvidia-alternative substitution (352.79-6).
@@ -51,9 +52,6 @@ nvidia-graphics-drivers (340.98-1+) UNRELEASED; urgency=medium
   * ignore_xen_on_arm.patch: Update to add workaround for conftest.sh to fix
     kernel module build failure on armhf by forcing XEN_PRESENT=0 when
     building on armhf, thanks to Luca (352.79-2).
-  * Add page-cache-release.patch (352.79-7), vm-fault-minor.patch (uvm only)
-    (352.79-7) and get-user-pages.patch (352.79-8) to fix kernel module build
-    for Linux 4.6, thanks to Luca.
   * nvidia-detect: Update list of newer PCI IDs from release 352.79.
   * Add B-D: dpkg-dev (>= 1.17) for dpkg-parsechangelog --show-field
     (352.79-6).
@@ -61,10 +59,6 @@ nvidia-graphics-drivers (340.98-1+) UNRELEASED; urgency=medium
   * Stop shipping unused pci.ids file (352.21-1).
   * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
-
-  [ Luca Boccassi ]
-  * page-cache-release.patch, get-user-pages.patch, vm-fault-minor.patch:
-    drop, fixed upstream.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 11:34:10 +0100
 
