finalize changelog for nvidia-graphics-drivers (367.44-3)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6901 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-nvidia-graphics-drivers (367.44-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (367.44-3) unstable; urgency=medium
 
   * Let libnvidia-fatbinaryloader depend on libnvidia-ptxjitcompiler.
     (Closes: #839193)
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 07 Oct 2016 17:01:25 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 07 Oct 2016 22:01:17 +0200
 
 nvidia-graphics-drivers (367.44-2) unstable; urgency=medium
 
