--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (370.28-0~svn1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (370.28-1) experimental; urgency=medium
 
   * New upstream short lived branch release 370.28 (2016-09-08).
     - Fixed undefined symbol references in libnvidia-glcore.so.
@@ -30,8 +30,9 @@ nvidia-graphics-drivers (370.28-0~svn1) UNRELEASED; urgency=medium
   * Update symbols files
   * drm-gem-object-lookup.patch, radix-tree-empty.patch: Drop, fixed upstream.
   * man-fixes-nvidia-smi.patch: refresh, fails to apply on 370.28.
+  * Upload to experimental.
 
- -- Luca Boccassi <luca.boccassi@gmail.com>  Tue, 16 Aug 2016 20:54:02 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 07 Oct 2016 22:41:31 +0200
 
 nvidia-graphics-drivers (367.44-3) unstable; urgency=medium
 
