--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (367.57-0~svn1) UNRELEASED; urgency=medium
       the PID file if a second instance of the daemon is started.
     - Fixed a bug that allowed nvidia-installer to attempt loading kernel
       modules that were built against non-running kernels.
+  * Update nv-readme.ids.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 10 Oct 2016 18:53:52 +0100
 
